Add item mapper logic and tests
Excludes logic for location and class fields

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,8 @@ envlist = clean, py37, py38
 deps =
     pytest
     pytest-cov
-    jsonschema
+    tortilla
+    pyyaml
 commands = pytest --cov=dp2rathena --cov-append --cov-report=term-missing
 
 [testenv:clean]
