--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-  
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -41,3 +41,6 @@ cover/
 
 # Environments
 .env
+
+# VS Code
+.vscode/*
