Fix tox tests for python 3.7

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,9 @@ deps =
     pytest-cov
     tortilla
     pyyaml
+    python-dotenv
 commands = pytest --cov=dp2rathena --cov-append --cov-report=term-missing
+allowlist_externals = poetry
 
 [testenv:clean]
 deps = coverage
