--- a/tests/fixtures/item_1101_501.yml
+++ b/tests/fixtures/item_1101_501.yml
@@ -29,4 +29,10 @@ Body:
   WeaponLevel: 1
   EquipLevelMin: 2
   Refineable: true
+- Id: 501
+  AegisName: Red_Potion
+  Name: Red Potion
+  Type: Healing
+  Buy: 10
+  Weight: 70
 
