--- a/tests/fixtures/item_501_1101.yml
+++ b/tests/fixtures/item_501_1101.yml
@@ -2,6 +2,12 @@ Header:
   Type: ITEM_DB
   Version: 1
 Body:
+- Id: 501
+  AegisName: Red_Potion
+  Name: Red Potion
+  Type: Healing
+  Buy: 10
+  Weight: 70
 - Id: 1101
   AegisName: Sword
   Name: Sword
