Use user/pass for Travis CI and PyPI auth
poetry config pypi-token.pypi <TOKEN> appears to have a bug

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 script:
 - poetry run tox
 before_deploy:
-- poetry config pypi-token.pypi $PYPI_TOKEN
+- poetry config http-basic.pypi $PYPI_USER $PYPI_TOKEN
 - poetry build
 deploy:
   provider: script
