--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ before_deploy:
 deploy:
   provider: script
   script: poetry publish
-  cleanup: false
+  skip_cleanup: true
   on:
     tags: true
