--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ install:
 - poetry install
 script:
 - poetry run tox
+after_success:
+- bash <(curl -s https://codecov.io/bash)
 before_deploy:
 - poetry build
 - poetry config pypi-token.pypi $PYPI_TOKEN
