--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ deps =
     tortilla
     pyyaml
     python-dotenv
-commands = pytest --cov=dp2rathena --cov-append --cov-report=term-missing
+commands = pytest --cov=dp2rathena --cov-append --cov-report xml
 allowlist_externals = poetry
 
 [testenv:clean]
