Add support for Python 3.6

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.7"
+python = ">=3.6"
+python-dotenv = "^0.15.0"
 PyYAML = "^5.3.1"
 tortilla = "^0.5.0"
 click = "^7.1.2"
@@ -30,8 +31,7 @@ click = "^7.1.2"
 [tool.poetry.dev-dependencies]
 tox = "^3.20.1"
 tox-travis = "^0.12"
-pytest = "^6.2.1"
-python-dotenv = "^0.15.0"
+pytest-cov = "^2.10.1"
 
 [tool.poetry.scripts]
 dp2rathena = "dp2rathena.cli:dp2rathena"
