--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = clean, py37, py38
+envlist = clean, py36, py37, py38
 isolated_build = true
 
 [testenv]
